# django-icalendar

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.claude/: settings.json
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml
docs/: conf.py  configuration.rst  index.md  installation.md  usage.md
src/django_icalendar/: admin.py  apps.py  conf.py  main.py  models.py
src/django_icalendar/migrations/: 0001_calendar_model.py
tests/: conftest.py  factories.py  settings.py  test_calendar_model.py  test_main.py
tests/fixtures/ics/: calendar_full.ics  calendar_minimal.ics
